--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -1,11 +1,6 @@
 name: ktlint
 
-on:
-  pull_request:
-    paths:
-      - .github/workflows/ktlint.yml
-      - 'src/**/*.kt'
-      - '**.kts'
+on: [push, pull_request]
 
 jobs:
   ktlint:
