--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,12 +1,11 @@
-name: detekt
+name: test
 on: [push, pull_request]
 jobs:
   detekt:
     runs-on: ubuntu-latest
-
     steps:
       - name: "checkout"
         uses: actions/checkout@v2
 
-      - name: "detekt"
-        uses: natiginfo/action-detekt-all@1.21.0
+      - name: "test"
+        run: ./gradlew check
